# Fingerprint-Modelling-Project

./: CMakeLists.txt
include/: coordinates.h  image.h
src/: coordinates.cpp  image.cpp  main.cpp
test/: CMakeLists.txt  coordinates.cpp  coordinates.h  image.cpp  image.h  pixels.cpp  pixels.h  tests.cpp
